# urban-threadz-rag-chatbot

./: .gitignore  ARCHITECTURE.md  CHANGES_SUMMARY.txt  CHECKLIST.md  COMPLETE_FIX_SUMMARY.md  Dockerfile  ERRORS_FIXED.md  QUICK_START_NEW_CLIENT.md  README.md  START_HERE.md  data_loader.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.sh  test_embeddings.py  vector_db.py
app/: auth.py  config.py  main.py  ui.py
businesses/urban_threadz/: business.json
ingestion/: embedder.py  ingest.py  loader.py
qdrant_storage/: raft_state.json
qdrant_storage/collections/docs/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/docs/0/segments/03235267-3064-4b3b-b9ef-25b55a07bbe3/payload_index/: IDENTITY  MANIFEST-000013
qdrant_storage/collections/docs/0/segments/51fce506-54eb-4aec-9a77-31fa27852024/payload_index/: IDENTITY  MANIFEST-000013
qdrant_storage/collections/docs/0/segments/5f7d9c4d-0afa-44c8-ac63-4635e7609e96/payload_index/: IDENTITY  MANIFEST-000013
qdrant_storage/collections/docs/0/segments/7973030e-32e1-4045-b422-d44f00868e51/: mutable_id_tracker.mappings
qdrant_storage/collections/docs/0/segments/7973030e-32e1-4045-b422-d44f00868e51/payload_index/: IDENTITY  LOG  MANIFEST-000013
qdrant_storage/collections/docs/0/segments/f4b3a9e7-a10d-4f86-a8af-e4c8cd8aac2c/payload_index/: IDENTITY  MANIFEST-000013
rag/: chain.py  llm_factory.py  prompts.py  retriever.py
utils/: error_handler.py  file_utils.py
vector_db/urban_threadz/: index.faiss
(+2 files in other folders)
